2003-04-10  Patrice Dumas <dumas@centre-cired.fr>
	* texi2html.pl, texi2html.init: labels were put 2 times in special
	sections (Top, about, toc...).
	in vtable, ftable and table, even with an empty first item we
	begin a <dd> as only <dd> and <dt> are allowed to follow <dl>.
	Right labels are put in special sections and files are omitted
	when the href is on the same file.
	change &#156; to &oelig; and &#140; to &OElig; (as tidy do)
	* Tests/*/nodetest.texi: test for more simple special commands

2003-04-09  Patrice Dumas <dumas@centre-cired.fr>
	* texi2html.pl, texi2html.init: formatting put in texi2html.init
	hrefs to anchors and index entries which are in footnotes are right
	scan_texi changed to have a stack
	verbose and debug goes to STDERR
	unusefull empty lines removed
	new option -dump_texi used to debug, dumps the result of pass_texi
	to a file
	menu_comments are always preformatted
	better handling of @math and @sc
	* Tests/*: a little more things tested.

2003-04-04  Patrice Dumas <dumas@centre-cired.fr>
	* texi2html.pl, texi2html.init: deffn and the like better handled
	preformatted sections are closed when there is a new format
	and reopened right after the format such that there is no
	validation error. The preformatted state is kept within
	menu, deff body, simple formats, tables, with tt instead of
	pre for terms, as pre isn't allowed in dt, but not in 
	indices.
	simple macros are better handled when texi macros are removed
	or in preformatted sections.
	copying/end copying and insertcopying handled
	@head_lines containing things which should be before the navigation
	panel are used to get the labels for elements.
	first page of index is handled like a normal format
	* Tests/*: more tests for imbrications.
	
2003-04-02  Patrice Dumas <dumas@centre-cired.fr>
	* texi2html.pl: footnotes better handled, they have a separated
	stack, state and text.
	footnotes, anchors and refs can be mixed with better results.