@@ -226,11 +226,11 @@ Send bugs and suggestions to <users@texi2html.cvshome.org>
 <tr><td></td><td valign="top"><a href="xemacs_11.html#SEC74"><code>C-h f</code></a></td><td valign="top"><a href="xemacs_11.html#SEC74">8.3 Help by Command or Variable Name</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_24.html#SEC230"><code>C-h f</code></a></td><td valign="top"><a href="xemacs_24.html#SEC230">21.9 Documentation Commands</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_20.html#IDX698"><code>C-h h</code></a></td><td valign="top"><a href="xemacs_20.html#SEC182">17.1 What is Mule?</a></td></tr>
-<tr><td></td><td valign="top"><a href="xemacs_20.html#IDX707"><code>C-h I</code></a></td><td valign="top"><a href="xemacs_20.html#SEC185">17.4 Selecting an Input Method</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_11.html#SEC78"><code>C-h i</code></a></td><td valign="top"><a href="xemacs_11.html#SEC78">8.7 Other Help Commands</a></td></tr>
+<tr><td></td><td valign="top"><a href="xemacs_20.html#IDX707"><code>C-h I</code></a></td><td valign="top"><a href="xemacs_20.html#SEC185">17.4 Selecting an Input Method</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_11.html#IDX252"><code>C-h k</code></a></td><td valign="top"><a href="xemacs_11.html#SEC73">8.2 Documentation for a Key</a></td></tr>
-<tr><td></td><td valign="top"><a href="xemacs_11.html#IDX266"><code>C-h l</code></a></td><td valign="top"><a href="xemacs_11.html#SEC78">8.7 Other Help Commands</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_20.html#IDX702"><code>C-h L</code></a></td><td valign="top"><a href="xemacs_20.html#SEC183">17.2 Language Environments</a></td></tr>
+<tr><td></td><td valign="top"><a href="xemacs_11.html#IDX266"><code>C-h l</code></a></td><td valign="top"><a href="xemacs_11.html#SEC78">8.7 Other Help Commands</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_11.html#IDX268"><code>C-h m</code></a></td><td valign="top"><a href="xemacs_11.html#SEC78">8.7 Other Help Commands</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_11.html#IDX274"><code>C-h n</code></a></td><td valign="top"><a href="xemacs_11.html#SEC78">8.7 Other Help Commands</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_11.html#SEC76"><code>C-h p</code></a></td><td valign="top"><a href="xemacs_11.html#SEC76">8.5 Keyword Search for Lisp Libraries</a></td></tr>
@@ -387,8 +387,8 @@ Send bugs and suggestions to <users@texi2html.cvshome.org>
 <tr><td></td><td valign="top"><a href="xemacs_13.html#IDX352"><code>C-x r SPC</code></a></td><td valign="top"><a href="xemacs_13.html#SEC103">10.1 Saving Positions in Registers</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_13.html#SEC106"><code>C-x r w</code></a></td><td valign="top"><a href="xemacs_13.html#SEC106">10.4 Saving Window Configurations in Registers</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_20.html#IDX700"><code>C-x RET</code></a></td><td valign="top"><a href="xemacs_20.html#SEC182">17.1 What is Mule?</a></td></tr>
-<tr><td></td><td valign="top"><a href="xemacs_20.html#IDX717"><code>C-x <kbd>RET</kbd> C</code></a></td><td valign="top"><a href="xemacs_20.html#SEC187">17.6 Coding Systems</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_20.html#IDX726"><code>C-x RET c</code></a></td><td valign="top"><a href="xemacs_20.html#SEC189">17.8 Specifying a Coding System</a></td></tr>
+<tr><td></td><td valign="top"><a href="xemacs_20.html#IDX717"><code>C-x <kbd>RET</kbd> C</code></a></td><td valign="top"><a href="xemacs_20.html#SEC187">17.6 Coding Systems</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_20.html#IDX711"><code>C-x RET C-\</code></a></td><td valign="top"><a href="xemacs_20.html#SEC185">17.4 Selecting an Input Method</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_20.html#IDX724"><code>C-x RET f</code></a></td><td valign="top"><a href="xemacs_20.html#SEC189">17.8 Specifying a Coding System</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_20.html#IDX731"><code>C-x RET k</code></a></td><td valign="top"><a href="xemacs_20.html#SEC189">17.8 Specifying a Coding System</a></td></tr>
