@@ -101,10 +101,10 @@ Send bugs and suggestions to <users@texi2html.cvshome.org>
 <tr><th><a name="INDEX1_P">P</a></th><td></td><td></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_29.html#IDX1240"><code>p (Calendar mode)</code></a></td><td valign="top"><a href="xemacs_29.html#SEC315">26.4 Converting To Other Calendars</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_29.html#IDX1194"><code>p d (Calendar mode)</code></a></td><td valign="top"><a href="xemacs_29.html#SEC308">26.1.4 Miscellaneous Calendar Commands</a></td></tr>
-<tr><td></td><td valign="top"><a href="xemacs_7.html#IDX162"><code>PGDN</code></a></td><td valign="top"><a href="xemacs_7.html#SEC51">4.2 Changing the Location of Point</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_14.html#IDX389"><code>pgdn</code></a></td><td valign="top"><a href="xemacs_14.html#SEC111">11.1 Scrolling</a></td></tr>
-<tr><td></td><td valign="top"><a href="xemacs_7.html#IDX161"><code>PGUP</code></a></td><td valign="top"><a href="xemacs_7.html#SEC51">4.2 Changing the Location of Point</a></td></tr>
+<tr><td></td><td valign="top"><a href="xemacs_7.html#IDX162"><code>PGDN</code></a></td><td valign="top"><a href="xemacs_7.html#SEC51">4.2 Changing the Location of Point</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_14.html#IDX388"><code>pgup</code></a></td><td valign="top"><a href="xemacs_14.html#SEC111">11.1 Scrolling</a></td></tr>
+<tr><td></td><td valign="top"><a href="xemacs_7.html#IDX161"><code>PGUP</code></a></td><td valign="top"><a href="xemacs_7.html#SEC51">4.2 Changing the Location of Point</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_14.html#IDX391"><code>prior</code></a></td><td valign="top"><a href="xemacs_14.html#SEC111">11.1 Scrolling</a></td></tr>
 <tr><td colspan="3"> <hr></td></tr>
 <tr><th><a name="INDEX1_Q">Q</a></th><td></td><td></td></tr>
